kubernetes/kube-nas/apps/kube-system/cilium/gateway/gateway.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname nas-gateway.techtales.io
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.100.92
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.techtales.io"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.techtales.io"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: techtales-io-tls
          - kind: Secret
            name: kube-nas-techtales-io-tls
